test/src/e2e_vm_tests/test_programs/should_pass/dca/library/unused_priv_free_fn/src/main.sw
library foo;

fn private_fn(x: u64) -> u64 {
    x
}
