test/src/e2e_vm_tests/test_programs/should_fail/recover_expr_dot/src/main.sw
contract;

fn recover_on_expr_dot() {
    foo.;
}

fn recovery_witness() -> bool { 0 }
